# kaggle

./: .gitignore  pyproject.toml
Exploring-Mental-Health-Data/notebooks/: EDA.ipynb
utils/: pre_processing.py
utils/model_selection/: grid_search_model.py
utils/pre_processor/: outlier_remover.py  pre_processor.py
