[tool.poetry]
name = "utils"
version = "0.1.0"
description = ""
authors = ["aygalic <aygalic@hotmail.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
jupyter = "^1.1.1"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
xgboost = "^2.1.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
